Changed tmux settings a bit

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,6 @@
+# Allow using of the mouse to resize and select panes.
 set-option -g mouse-select-pane on
+set-option -g mouse-resize-pane on
 set-option -g mouse-utf8 on
 set-option -g mode-mouse on
 
@@ -18,3 +20,18 @@ bind - split-window -v
 
 # bind PREFIX r to reload the main .tmux.conf file in the current session
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+
+# Visuals
+set -g status-bg black
+set -g status-fg white
+set -g window-status-current-bg white
+set -g window-status-current-fg black
+set -g window-status-current-attr bold
+set -g status-interval 60
+set -g status-left-length 30
+set -g status-left '#[fg=green](#S) #(whoami)'
+
