Changed mouse integration config & removed time update

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,9 @@
 # Allow using of the mouse to resize and select panes.
-set-option -g mouse-select-pane on
-set-option -g mouse-resize-pane on
-set-option -g mouse-utf8 on
-set-option -g mode-mouse on
+#set-option -g mouse-select-pane on
+#set-option -g mouse-resize-pane on
+#set-option -g mouse-utf8 on
+#set-option -g mode-mouse on
+set -g mouse on
 
 # Use vim-style pane switching
 bind k selectp -U
@@ -34,4 +35,5 @@ set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)'
+set -g status-right "#H"
 
